examples/test_package/Double_dc_full/steps/benchquery_rough_run4/#test_results_result.txt
Error evaluating Problog model:
    target, results = self._ground(db, term, target, silent_fail=False, **kwdargs)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 439, in _ground
    raise UnknownClause(term.signature, location=db.lineno(term.location))
problog.engine.UnknownClause: No clauses found for 'query_pop/1' at 59:7.Error evaluating Problog model:
    target, results = self._ground(db, term, target, silent_fail=False, **kwdargs)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 439, in _ground
    raise UnknownClause(term.signature, location=db.lineno(term.location))
problog.engine.UnknownClause: No clauses found for 'query_pop/1' at 59:7.Error evaluating Problog model:
    target, results = self._ground(db, term, target, silent_fail=False, **kwdargs)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine.py", line 439, in _ground
    raise UnknownClause(term.signature, location=db.lineno(term.location))
problog.engine.UnknownClause: No clauses found for 'query_pop/1' at 59:7.